# Robot-Sim

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  XXXX.json  meta.json  package-lock.json  加装相机皮肤.md  目录结构.md  迁移模型plan.md
src/acquisition_interfaces/: CMakeLists.txt  package.xml
src/acquisition_interfaces/msg/: AcquisitionStatus.msg
src/camera_3d_driver/: CMakeLists.txt  package.xml
src/camera_3d_driver/config/: cameratcp.yaml
src/camera_3d_driver/src/: camera_3d_driver.cpp
src/camera_3d_driver/test/: test_camera_3d_driver.cpp
src/camera_pool_driver/: CMakeLists.txt  package.xml
src/camera_pool_driver/src/: camera_pool_driver.cpp
src/core/robot_sim_bringup/: CMakeLists.txt  package.xml
src/core/robot_sim_bringup/config/: ros_gz_bridge_depth.yaml  ros_gz_bridge_imu.yaml  ros_gz_bridge_lidar.yaml
src/core/robot_sim_bringup/launch/: distributed_local.launch.py  record_bag.launch.py  sensor_receivers.launch.py  sim.launch.py
src/core/robot_sim_bringup/robot_sim_bringup/: __init__.py  gazebo_plugin_check.py  migrate_config.py  module_adapter.py  module_runner.py  platform_adapter.py  platform_assertions.py  platform_config.py  platform_runner.py  profile_lint.py  registry.py  run_case.py  run_suite.py  scaffold_assets.py  scaffold_robot.py  schema_validation.py  sim_config_loader.py  sim_launch_builder.py  sim_smoke_helper.py  task_runners.py  validation_cases.py
src/core/robot_sim_bringup/schemas/: data_source.schema.json  sim_profile.schema.json  system_profile.schema.json  validation_case.schema.json  validation_case_v4.schema.json  validation_suite.schema.json
src/core/robot_sim_bringup/scripts/: migrate_config  run_case  run_suite  scaffold_adapter  scaffold_case  scaffold_robot  scaffold_suite  scaffold_system
src/core/robot_sim_bringup/test/: test_validation_cases.py
src/core/robot_sim_moveit_config/: CMakeLists.txt  package.xml
src/core/robot_sim_moveit_config/launch/: moveit.launch.py
src/core/robot_sim_scenarios/: CMakeLists.txt  package.xml
src/core/robot_sim_scenarios/examples/: load_scene.py
src/core/robot_sim_scenarios/robot_sim_scenarios/: __init__.py  loader.py  models.py  (+2 more)
src/data_collect_cloud_renderer/: CMakeLists.txt  package.xml
src/data_collect_cloud_renderer/src/: cloud_renderer.cu
src/data_collect_quality/: CMakeLists.txt  package.xml
src/data_collect_quality/src/: data_collect_quality_node.cpp
src/data_collect_sim/: CMakeLists.txt  README.md  package.xml
src/data_collect_sim/config/: nodemanage_sim.yaml  ros_gz_bridge_joints.yaml  ros_gz_bridge_sensors.yaml  ros_gz_bridge_tf.yaml
src/data_collect_sim/launch/: data_collect_sim.launch.py  gazebo_world.launch.py
src/data_collect_sim/scripts/: check_gz_model_node  joint_state_to_gz_joint_cmd_node  panda_joint_demo_node  robot_description_publisher_node  sim_camera_2d_node  sim_camera_3d_node  sim_fanuc_robot_node  spawn_fanuc_m20i_node  spawn_panda_weld_arm_node  tf_to_tcp_node
src/data_collect_sim/urdf/: common_materials.xacro  fanuc_m20ib25_gz.xacro  m20ib25.xacro  m20ib25_macro.xacro
src/data_collect_sim/worlds/: weld_cell.world.sdf
src/data_collect_ui/: package.xml  setup.cfg  setup.py
src/data_collect_ui/data_collect_ui/: __init__.py  app.py  main.py  renderer.py  ros_bridge.py  ui_components.py  utils.py
src/data_collect_ui/resource/: data_collect_ui
src/fanuc_robot/: CMakeLists.txt  package.xml
src/fanuc_robot/lib/: libFanucRobot.so.1.0
src/fanuc_robot/src/: fanuc_driver.cpp  fanuc_interface.cpp  fanuc_interface.h
src/file_reader/: CMakeLists.txt  package.xml
src/file_reader/src/: json_reader.cpp  json_reader_test.cpp  yaml_reader.cpp  yaml_reader_test.cpp
src/robot_sim_description/: CMakeLists.txt  package.xml
src/robot_sim_description/macros/: common.xacro  gazebo_sensors.xacro  ros2_control.xacro  sensor_mounts.xacro
src/robot_sim_description/robots/: panda.urdf.xacro
src/robot_sim_description/urdf/: panda_arm.urdf.xacro
src/robot_sim_fanuc_description/: CMakeLists.txt  README.md  package.xml
src/robot_sim_fanuc_description/robots/: fanuc_m20ia10l.urdf.xacro  fanuc_m20id12l.urdf.xacro
src/robot_sim_fanuc_moveit_config/: CMakeLists.txt  package.xml
src/robot_sim_fanuc_moveit_config/config/: fanuc_m20ia10l.srdf  fanuc_m20id12l.srdf  joint_limits.yaml  moveit_controllers.yaml
src/robot_sim_fanuc_moveit_config/rviz/: fanuc_m20id12l_moveit.rviz
src/robot_sim_scenarios/: CMakeLists.txt  package.xml
src/robot_sim_scenarios/robot_sim_scenarios/: sdf_builder.py
src/robot_sim_scenarios/scenarios/: calibration_demo.yaml  lab_demo.yaml  sensor_test.yaml  welding_demo.yaml
src/robot_sim_scenarios/scenes/: industrial_cell.yaml  tabletop_pick_place.yaml
src/robot_sim_scenarios/test/: test_scene_library.py
src/robot_sim_scenarios/worlds/: robot_lab.world.sdf  robot_lab_distributed.world.sdf
src/robot_sim_sensors/robot_sim_sensor_depth/: CMakeLists.txt  package.xml
src/robot_sim_sensors/robot_sim_sensor_lidar/: CMakeLists.txt  package.xml
src/robot_task_interfaces/: CMakeLists.txt  package.xml
src/robot_task_interfaces/msg/: TaskStatus.msg
src/sensors/robot_sim_sensor_camera/: CMakeLists.txt  package.xml
src/weld_interface/: CMakeLists.txt  package.xml
src/weld_interface/msg/: CollectionQuality.msg  DataCollectStatus.msg  FanucRobotInfo.msg  Height.msg  JointPos.msg  LiftDrop.msg  Line.msg  LineCoeffs.msg  ModbusData.msg  ModbusDataArray.msg  MoveAxes.msg  PlaneCoeffs.msg  Point.msg  RobotCommand.msg  SamMaskLog.msg  TcpPos.msg  WeldRegisterInfo.msg  WeldTaskExtension.msg
src/weld_interface/srv/: CallAi.srv  FanucMovRate.srv  InitPoint.srv  IntData.srv  Move.srv  MoveToFirstTeachingPoint.srv  MoveToNextTeachingPoint.srv  ReadFanucRegister.srv  RecordCurrentTeaching.srv  Run.srv  Scan3d.srv  SetCollectionTask.srv  SetMode.srv  SetWeldCollectionTask.srv  SpecialSpeedl.srv  Speedl.srv  StartForward.srv  UpdateHeight.srv  UpdateLineCoeffs.srv  UpdateMoveAxes.srv  UpdatePlaneCoeffs.srv  UpdateRange.srv  WriteDataPoint.srv
(+261 files in other folders)
