<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_3d_driver</name>
  <version>0.0.0</version>
  <description>3D camera driver</description>

  <maintainer email="huang@todo.todo">huang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <build_depend>weld_interface</build_depend>
  <build_export_depend>weld_interface</build_export_depend>
  <exec_depend>weld_interface</exec_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>file_reader</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- system / third-party libs (rosdep keys) -->
  <exec_depend>opencv</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
