<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_collect_cloud_renderer</name>
  <version>0.1.0</version>
  <description>CUDA/OpenGL point cloud renderer for the weld data collection UI.</description>
  <maintainer email="huang@todo.todo">huang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cuda</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>opengl</build_depend>
  <exec_depend>cuda</exec_depend>
  <exec_depend>libglew2.2</exec_depend>
  <exec_depend>opengl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
