<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_sim_fanuc_description</name>
  <version>0.1.0</version>
  <description>ROS 2 simulation description and downloaded ROS-Industrial meshes for FANUC M-20iA/10L.</description>
  <maintainer email="2972689924@qq.com">huang</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
