<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_sim_fanuc_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 configuration for the FANUC M-20iA/10L simulation profile.</description>
  <maintainer email="2972689924@qq.com">huang</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>robot_sim_fanuc_description</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
