<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_sim_scenarios</name>
  <version>0.1.0</version>
  <description>Gazebo worlds and test scenes for the robot simulation platform.</description>
  <maintainer email="2972689924@qq.com">huang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_sim_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
