<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_sim_bringup</name>
  <version>0.1.0</version>
  <description>Launch entrypoints for the professional robot ros_gz simulation platform.</description>
  <maintainer email="19862681939@163.com">MzKyle</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rosbag2_compression_zstd</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>robot_sim_control</exec_depend>
  <exec_depend>robot_sim_description</exec_depend>
  <exec_depend>robot_sim_moveit_config</exec_depend>
  <exec_depend>robot_sim_scenarios</exec_depend>
  <exec_depend>robot_sim_sensor_camera</exec_depend>
  <exec_depend>robot_sim_sensor_depth</exec_depend>
  <exec_depend>robot_sim_sensor_imu</exec_depend>
  <exec_depend>robot_sim_sensor_lidar</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
